[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["crumblingstatue <radiantstatue@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc"

[dependencies]
concat-idents = "1.1.3"
itertools = "0.13"
itoa = "1"
md5 = "0.7.0"
